# VikaVoice

./: .editorconfig  .gitignore  .markdownlint.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  _МАНИФЕСТ.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adr.yml  bug.yml  feature.yml  (+1 more)
docs/: ARCHITECTURE.md  COMPLIANCE-44FZ-152FZ.md  DEPLOYMENT-EDITIONS.md  HARDWARE-BOM.md  INTEGRATIONS.md  MEETING-COMPLEX-INDEX.md  MOBILE.md  MULTI-DEVICE.md  README.md  REUSE-MAP.md  ROADMAP.md  SKILLS.md  USER-SCENARIOS.md  roadmap.md
engineering/: BOM.xlsx
hardware/: CASE-COVER.md  GRILLE-ATTRIBUTION.md  INDUSTRIAL-DESIGN.md  README.md
procurement/: TZ_44FZ.md
software/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
software/companion-client/: README.md  requirements.txt  system_audio_client.py
software/core/analytics/: talk_time.py
software/core/api/: cabinet.py  enrollment.py  ingest_ws.py
software/core/asr/: base.py
software/core/diarization/: base.py
software/core/export/: markdown.py
software/core/metrics/: der.py  wer.py
software/core/mic_array/: README.md
software/core/storage/: db.py
software/core/summarize/: llm.py  protocol.py
software/core/voice_enrollment/: enroll.py
software/device/: README.md
software/docker/: Dockerfile.ingest
software/docs/: hardware_line_in.md
software/scripts/: vendor_meetily.sh
software/tests/: test_asr_localwhisper.py  test_der.py  test_enrollment.py  test_enrollment_api.py  test_ingest_ws.py  test_pipeline.py  test_summarize.py  test_wer.py
(+46 files in other folders)
