[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vikavoice-core"
version = "0.1.0"
description = "VikaVoice core: приём аудио, интерфейсы ASR и voice enrollment (скелет)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",   # TestClient (starlette)
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["core*"]
exclude = ["core.vendor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["core/vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
